--- a/about.html
+++ b/about.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="css\about.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css\about.css" rel="stylesheet">
+  
+  <title>About Me</title>
 </head>
 <body>
 
