--- a/about.html
+++ b/about.html
@@ -3,11 +3,24 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css\about.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
   
   <title>About Me</title>
 </head>
 <body>
 
+<header class="masthead mb-auto">
+    <div class="inner">
+      <h3 class="masthead-brand">TEN</h3>
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+  
 <div class="bgimg-1">
   <div class="caption">
     <span class="border">FULL PAGE</span><br>
