--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
     <!--font awesome is mainly used for the social icons -->
   </head>
   <body >
-    
+    <header>
+      <div class="logo">
+        <img src="img/devtadiwa.png" alt=""> 
+      </div>
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">My Work</a></li> 
+        </ul>
+      </nav>
+    </header>
+
+    <section class="intro" id="home">
+      <h1 class="section__title section__title--intro">
+        Hi, I am <strong>Tadiwanashe Ndiripo</strong>
+      </h1>
+      <p class="section__subtite section__subtite--intro">
+        front-end dev
+      </p>
+      <img src="img/A.jpg" alt="a picture of Tadiwa Ndiripo">
+    </section>
 </body>
 </html>
